--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Who -- Call&Match",
+  "name": "Who -- Tu Match Perfecto",
   "short_name": "Who",
   "description": "Dating and call matching app",
   "start_url": "/",
